 NOTE: Corrections or additions to the ChangeLog may be submitted 
       to http://bugs.digium.com.  Documentation and formatting
       fixes are not listed here.  A complete listing of changes
       is available through the Asterisk-CVS mailing list hosted
       at http://lists.digium.com.

Asterisk 1.0.8

 -- chan_zap
    -- Asterisk will now also look in the regular context for the fax extension while
       executing a macro.  Previously, for this to work, the fax extension would have
       to be included in the macro definition.
    -- On some systems, ALERTING will be sent after PROCEEDING, so code has been
       added to account for this case.
    -- If no extension is specified on an overlap call, the 's' extension will be used.
    -- Add support for feautres of 2nd gen hardware
 -- chan_sip
    -- We no longer send a "to" tag on "100 Trying" messages, as it is inappropriate
       to do so.
    -- We now respond correctly to an invite for T.38 with a "488 Not acceptable here"
    -- We now discard saved tags on 401/407 responses in case the provider we're talking
       to tries to pull a dirty trick on us and change it.
    -- rtptimeout options will now be correctly set on a peer basis rather than only global
 -- chan_mgcp
    -- Fixed setting of accountcode
    -- Fixed where *67 to block callerid only worked for first call
 -- chan_agent
    -- We now will not pass audio until the agent has acked the call if the configuration
       is set up for the agent to do so.
 -- chan_alsa
    -- Fixed problems with the unloading of this module
 -- res_agi
    -- A fix has been added to prevent calls from being hung up when more than one
       call is executing an AGI script calling the GET DATA command.
    -- AGI scripts will now continue to run even if a file was not found with the
       GET DATA command.
    -- When calling SAY NUMBER with a number like 09, we will now say "nine" instead
       of "zero"
 -- app_dial